# QuickBpmTapper

./: .gitignore  CMakeLists.txt  InstallChangeMusicBee.bat  README.md
cmake/: gtk3.cmake
src/: CMakeLists.txt  ChangeMusicBee.ahk  calculator.cpp  calculator.h  callbacks.cpp  callbacks.h  main.cpp  musicbee.cpp  musicbee.h
src/resources/: main.glade
